hot-fix mobile version card overflow

--- a/components/styles/module/Music.module.css
+++ b/components/styles/module/Music.module.css
@@ -2,7 +2,7 @@
     margin-top: 4rem;
     margin-bottom: 4rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(min(17rem, 50% - 0.5rem), 1fr));
     gap: 1.5rem;
 }
 
@@ -61,7 +61,7 @@
     opacity: 0;
     transition: opacity 300ms ease-in-out;
     border-radius: 0.375rem;
-    z-index: 5;
+    z-index: 3;
 }
 
 .musicImageGroup:hover .musicHoverOverlay {
